Update header section - add adaptability

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VPN</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon" />
   </head>
   <body>
     <!-- HEADER -->
@@ -12,7 +13,7 @@
       <header class="header">
         <a href="#" class="logo">
           <img class="logotype" src="./img/logo.svg" alt="logotype" />
-          <span> Lasles<span class="logo-bold">VPN</span></span>
+          <p>Lasles<span class="logo-bold">VPN</span></p>
         </a>
         <nav class="navbar">
           <a href="#" class="navlink">About</a>
@@ -21,9 +22,17 @@
           <a href="#" class="navlink">Testimonials</a>
           <a href="#" class="navlink">Help</a>
         </nav>
-        <div class="header-login">
-          <a href="#">Sign In</a>
-          <a class="btn" href="#">Sign Up</a>
+        <div class="header-wrapper">
+          <div class="header-login">
+            <a class="navlink" href="#">Sign In</a>
+            <a class="btn" href="#">Sign Up</a>
+          </div>
+
+          <div class="hamburger-icon">
+            <div class="top"></div>
+            <div class="middle"></div>
+            <div class="bottom"></div>
+          </div>
         </div>
       </header>
       <!-- MAIN -->
@@ -31,5 +40,7 @@
       <!-- FOOTER -->
       <footer></footer>
     </div>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
