--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <div class="container">
       <header class="header">
-        <a href="#" class="logo">
+        <a href="#" class="logo header-logo">
           <img class="logotype" src="./img/logo.svg" alt="logotype" />
           <p>Lasles<span class="logo-bold">VPN</span></p>
         </a>
@@ -37,10 +37,104 @@
       </header>
       <!-- MAIN -->
       <main></main>
-      <!-- FOOTER -->
-      <footer></footer>
     </div>
-
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-info">
+          <a href="#" class="logo">
+            <img class="logotype" src="./img/logo.svg" alt="logotype" />
+            <p>Lasles<span class="logo-bold">VPN</span></p>
+          </a>
+          <p class="footer-text">
+            <span>LaslesVPN</span> is a private virtual network that has unique
+            features and has high security.
+          </p>
+          <div class="footer-social-icons">
+            <a href="https://github.com" target="_blank">
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                fill="#f53855"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </a>
+            <a href="https://dribbble.com/Zeendux" target="_blank">
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                fill="#f53855"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12 2a10 10 0 1 0 10 10A10.009 10.009 0 0 0 12 2Zm6.613 4.614a8.523 8.523 0 0 1 1.93 5.32 20.093 20.093 0 0 0-5.949-.274c-.059-.149-.122-.292-.184-.441a23.879 23.879 0 0 0-.566-1.239 11.41 11.41 0 0 0 4.769-3.366ZM10 3.707a8.82 8.82 0 0 1 2-.238 8.5 8.5 0 0 1 5.664 2.152 9.608 9.608 0 0 1-4.476 3.087A45.755 45.755 0 0 0 10 3.707Zm-6.358 6.555a8.57 8.57 0 0 1 4.73-5.981 53.99 53.99 0 0 1 3.168 4.941 32.078 32.078 0 0 1-7.9 1.04h.002Zm2.01 7.46a8.51 8.51 0 0 1-2.2-5.707v-.262a31.641 31.641 0 0 0 8.777-1.219c.243.477.477.964.692 1.449-.114.032-.227.067-.336.1a13.569 13.569 0 0 0-6.942 5.636l.009.003ZM12 20.556a8.508 8.508 0 0 1-5.243-1.8 11.717 11.717 0 0 1 6.7-5.332.509.509 0 0 1 .055-.02 35.65 35.65 0 0 1 1.819 6.476 8.476 8.476 0 0 1-3.331.676Zm4.772-1.462A37.232 37.232 0 0 0 15.113 13a12.513 12.513 0 0 1 5.321.364 8.56 8.56 0 0 1-3.66 5.73h-.002Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </a>
+            <a href="https://t.me" target="_blank">
+              <svg
+                class="w-6 h-6 text-gray-800 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                fill="#f53855"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="#f53855"
+                  fill-rule="evenodd"
+                  d="M12 4a8 8 0 0 0-6.895 12.06l.569.718-.697 2.359 2.32-.648.379.243A8 8 0 1 0 12 4ZM2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.96 9.96 0 0 1-5.016-1.347l-4.948 1.382 1.426-4.829-.006-.007-.033-.055A9.958 9.958 0 0 1 2 12Z"
+                  clip-rule="evenodd"
+                />
+                <path
+                  fill="#f53855"
+                  d="M16.735 13.492c-.038-.018-1.497-.736-1.756-.83a1.008 1.008 0 0 0-.34-.075c-.196 0-.362.098-.49.291-.146.217-.587.732-.723.886-.018.02-.042.045-.057.045-.013 0-.239-.093-.307-.123-1.564-.68-2.751-2.313-2.914-2.589-.023-.04-.024-.057-.024-.057.005-.021.058-.074.085-.101.08-.079.166-.182.249-.283l.117-.14c.121-.14.175-.25.237-.375l.033-.066a.68.68 0 0 0-.02-.64c-.034-.069-.65-1.555-.715-1.711-.158-.377-.366-.552-.655-.552-.027 0 0 0-.112.005-.137.005-.883.104-1.213.311-.35.22-.94.924-.94 2.16 0 1.112.705 2.162 1.008 2.561l.041.06c1.161 1.695 2.608 2.951 4.074 3.537 1.412.564 2.081.63 2.461.63.16 0 .288-.013.4-.024l.072-.007c.488-.043 1.56-.599 1.804-1.276.192-.534.243-1.117.115-1.329-.088-.144-.239-.216-.43-.308Z"
+                />
+              </svg>
+            </a>
+          </div>
+          <span class="footer-copyright">©2024LaslesVPN</span>
+        </div>
+        <ul class="footer-links">
+          <li>Product</li>
+          <li><a href="#" class="footer-links-item">Download</a></li>
+          <li><a href="#" class="footer-links-item">Pricing</a></li>
+          <li><a href="#" class="footer-links-item">Locations</a></li>
+          <li><a href="#" class="footer-links-item">Server</a></li>
+          <li><a href="#" class="footer-links-item">Countries</a></li>
+          <li><a href="#" class="footer-links-item">Blog</a></li>
+        </ul>
+        <ul class="footer-links">
+          <li>Engage</li>
+          <li><a href="#" class="footer-links-item">LaslesVPM</a></li>
+          <li><a href="#" class="footer-links-item">FAQ</a></li>
+          <li><a href="#" class="footer-links-item">Tutorials</a></li>
+          <li><a href="#" class="footer-links-item">About Us</a></li>
+          <li><a href="#" class="footer-links-item">Privacy Policy</a></li>
+          <li><a href="#" class="footer-links-item">Terms of Service</a></li>
+        </ul>
+        <ul class="footer-links">
+          <li>Earn money</li>
+          <li><a href="#" class="footer-links-item">Affiliate</a></li>
+          <li><a href="#" class="footer-links-item">Become a Partner</a></li>
+        </ul>
+      </div>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
