Add hero section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
         </div>
       </header>
       <!-- MAIN -->
-      <main></main>
+      <main>
+        <div class="hero-section">
+          <div class="hero-info">
+            <h1 class="hero-header">
+              Want anything to be easy with <span>LaslesVPN.</span>
+            </h1>
+            <p class="hero-p">
+              Provide a network for all your needs with ease and fun using
+              <span>LaslesVPN</span> discover interesting features from us.
+            </p>
+            <button href="#" class="hero-button">Get Started</button>
+          </div>
+          <img
+            class="man-first"
+            src="./img/Illustration 1.svg"
+            alt="man with computer"
+          />
+        </div>
+      </main>
     </div>
     <!-- FOOTER -->
     <footer>
